bk_ida/gccida/c0/ix86_va_arg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3043:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3044:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3053:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3054:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3055:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3056:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3066:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3070:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // [rsp+20h] [rbp-1C0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3072:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // [rsp+30h] [rbp-1B0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3074:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // [rsp+40h] [rbp-1A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3076:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // [rsp+68h] [rbp-178h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3078:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+80h] [rbp-160h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3090:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+F4h] [rbp-ECh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3154:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3159:1: error: use of undeclared identifier 'ix86_va_arg_intreg'
ix86_va_arg_intreg, 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/i386.c:3170:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1), 
  ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_va_arg/src/obj/i386.o] Error 1
